objects/CMPL123CME__EU_MIR_Code__c.object
<CustomObject>
    <description>This object is used to store EUMIR Code provided by European government codes and In-house codes.</description>
    <fields>
        <fullName>Annex_Version__c</fullName>
        <label>Annex Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Code_Type__c</fullName>
        <description>Code Type is the group of Annexure provided by the FDA for selecting the right code according to the case/incident.</description>
        <inlineHelpText>Choose a Code Type which satisfies the case the most.</inlineHelpText>
        <label>Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-Medical Device Problem Code</fullName>
                </value>
                <value>
                    <fullName>B-Investigation Type Code</fullName>
                </value>
                <value>
                    <fullName>C-Investigation Findings Code</fullName>
                </value>
                <value>
                    <fullName>D-Investigation Conclusion Code</fullName>
                </value>
                <value>
                    <fullName>E-Clinical Signs and Symptoms Code</fullName>
                </value>
                <value>
                    <fullName>F-Health Impact Code</fullName>
                </value>
                <value>
                    <fullName>G-Component Code</fullName>
                </value>
                <value>
                    <fullName>In-house medical device problem</fullName>
                </value>
                <value>
                    <fullName>In-house root cause evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Definition__c</fullName>
        <description>Description of the code.</description>
        <inlineHelpText>Description of the code.</inlineHelpText>
        <label>Definition</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activates or deactivates this EU MIR code.</description>
        <inlineHelpText>Activates or deactivates this EU MIR code.</inlineHelpText>
        <label>EU MIR Code Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Name_With_Code__c</fullName>
        <formula>Name &amp; " - "&amp; CMPL123CME__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name With Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Name__c</fullName>
        <description>Name of the Code.</description>
        <inlineHelpText>Name of the Code.</inlineHelpText>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Parent_Active__c</fullName>
        <description>Parent EU MIR code active status (if any).</description>
        <formula>IF(ISBLANK(CMPL123CME__Parent_Code__c), false, NOT(CMPL123CME__Parent_Code__r.CMPL123CME__Inactive__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>EU MIR Parent code status Active/Inactive.</inlineHelpText>
        <label>Parent Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Parent_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent EU MIR Code.</description>
        <inlineHelpText>Parent EU MIR Code.</inlineHelpText>
        <label>Parent Code</label>
        <referenceTo>CMPL123CME__EU_MIR_Code__c</referenceTo>
        <relationshipLabel>EU MIR Codes</relationshipLabel>
        <relationshipName>EU_MIR_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EU MIR Code</label>
    <listViews>
        <fullName>CMPL123CME__A_Medical_Device_Problem_Codes</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Name__c</columns>
        <columns>CMPL123CME__Name_With_Code__c</columns>
        <columns>CMPL123CME__Code_Type__c</columns>
        <columns>CMPL123CME__Parent_Code__c</columns>
        <columns>CMPL123CME__Definition__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <columns>CMPL123CME__Parent_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Code_Type__c</field>
            <operation>equals</operation>
            <value>A-Medical Device Problem Code</value>
        </filters>
        <label>A-Medical Device Problem Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Name__c</columns>
        <columns>CMPL123CME__Code_Type__c</columns>
        <columns>CMPL123CME__Parent_Code__c</columns>
        <columns>CMPL123CME__Definition__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <columns>CMPL123CME__Parent_Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__B_Investigation_Type_Codes</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Name__c</columns>
        <columns>CMPL123CME__Name_With_Code__c</columns>
        <columns>CMPL123CME__Code_Type__c</columns>
        <columns>CMPL123CME__Parent_Code__c</columns>
        <columns>CMPL123CME__Definition__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <columns>CMPL123CME__Parent_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Code_Type__c</field>
            <operation>equals</operation>
            <value>B-Investigation Type Code</value>
        </filters>
        <label>B-Investigation Type Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__C_Investigation_Findings_Codes</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Name__c</columns>
        <columns>CMPL123CME__Name_With_Code__c</columns>
        <columns>CMPL123CME__Code_Type__c</columns>
        <columns>CMPL123CME__Parent_Code__c</columns>
        <columns>CMPL123CME__Definition__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <columns>CMPL123CME__Parent_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Code_Type__c</field>
            <operation>equals</operation>
            <value>C-Investigation Findings Code</value>
        </filters>
        <label>C-Investigation Findings Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__D_Investigation_Conclusion_Codes</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Name__c</columns>
        <columns>CMPL123CME__Name_With_Code__c</columns>
        <columns>CMPL123CME__Code_Type__c</columns>
        <columns>CMPL123CME__Parent_Code__c</columns>
        <columns>CMPL123CME__Definition__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <columns>CMPL123CME__Parent_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Code_Type__c</field>
            <operation>equals</operation>
            <value>D-Investigation Conclusion Code</value>
        </filters>
        <label>D-Investigation Conclusion Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__E_Clinical_Signs_and_Symptoms_Codes</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Name__c</columns>
        <columns>CMPL123CME__Name_With_Code__c</columns>
        <columns>CMPL123CME__Code_Type__c</columns>
        <columns>CMPL123CME__Parent_Code__c</columns>
        <columns>CMPL123CME__Definition__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <columns>CMPL123CME__Parent_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Code_Type__c</field>
            <operation>equals</operation>
            <value>E-Clinical Signs and Symptoms Code</value>
        </filters>
        <label>E-Clinical Signs and Symptoms Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__F_Health_Impact_Codes</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Name__c</columns>
        <columns>CMPL123CME__Name_With_Code__c</columns>
        <columns>CMPL123CME__Code_Type__c</columns>
        <columns>CMPL123CME__Parent_Code__c</columns>
        <columns>CMPL123CME__Definition__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <columns>CMPL123CME__Parent_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Code_Type__c</field>
            <operation>equals</operation>
            <value>F-Health Impact Code</value>
        </filters>
        <label>F-Health Impact Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__G_Component_Codes</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Name__c</columns>
        <columns>CMPL123CME__Name_With_Code__c</columns>
        <columns>CMPL123CME__Code_Type__c</columns>
        <columns>CMPL123CME__Parent_Code__c</columns>
        <columns>CMPL123CME__Definition__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <columns>CMPL123CME__Parent_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Code_Type__c</field>
            <operation>equals</operation>
            <value>G-Component Code</value>
        </filters>
        <label>G-Component Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__In_house_medical_device_problem_codes</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Name__c</columns>
        <columns>CMPL123CME__Name_With_Code__c</columns>
        <columns>CMPL123CME__Code_Type__c</columns>
        <columns>CMPL123CME__Parent_Code__c</columns>
        <columns>CMPL123CME__Definition__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <columns>CMPL123CME__Parent_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Code_Type__c</field>
            <operation>equals</operation>
            <value>In-house medical device problem</value>
        </filters>
        <label>In-house medical device problem codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__In_house_root_cause_evaluation_codes</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Name__c</columns>
        <columns>CMPL123CME__Name_With_Code__c</columns>
        <columns>CMPL123CME__Code_Type__c</columns>
        <columns>CMPL123CME__Parent_Code__c</columns>
        <columns>CMPL123CME__Definition__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <columns>CMPL123CME__Parent_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Code_Type__c</field>
            <operation>equals</operation>
            <value>In-house root cause evaluation</value>
        </filters>
        <label>In-house root cause evaluation codes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EU MIR Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>